<resources>
    <string name="app_name">PACG Character Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="select_party">Select Your Party</string>
    <string name="add_party">Create New Party</string>
    <string name="add_removed_card">Remove Card</string>
    <string name="add_adventurer">Add Player</string>
    <string name="add_card">Add New Card</string>
    <string name="menu_about">About</string>
    <string name="menu_delete_party">Delete Party</string>
    <string name="title_activity_adventurers">Party Members</string>
    <string name="select_character">Select Your Character</string>
    <string name="select_bonus">Select Bonus</string>
    <string name="select_feat">Select a Feat</string>
    <string name="select_prof">Select Proficiency</string>
    <string name="select_hand_size">Select Hand Size</string>
    <string name="select_weapon">Select a Weapon</string>
    <string name="select_spell">Select a Spell</string>
    <string name="select_armor">Select an Armor</string>
    <string name="select_item">Select an Item</string>
    <string name="select_ally">Select an Ally</string>
    <string name="remove_card">Remove a Card</string>
    <string name="choose_removed_type">Remove Which Type</string>
    <string name="reinsert_card">Re-Insert Card</string>
    <string name="select_blessing">Select a Blessing</string>
    <string name="message_reinsert_card">Would you like to put this card back in the box?</string>
    <string name="character_options">Character Options</string>
    <string name="character_options_open">Open Character</string>
    <string name="character_add_description">Add Description</string>
    <string name="character_delete_character">Delete Character</string>
    <string name="character_delete_confirm">Are you sure you want to delete this character?</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_single_adventurer">SingleAdventurerActivity</string>
    <string name="title_activity_skills">SkillsActivity</string>
    <string name="title_activity_scenario">ScenarioList</string>
    <string name="title_activity_powers">PowersActivity</string>
    <string name="title_activity_removed_cards">RemovedCardsActivity</string>
    <string name="comm_policy">Community Use Policy</string>
    <string name="community_use">This application uses trademarks and/or copyrights owned by Paizo Publishing, LLC, which are used under Paizo\'s Community Use Policy. We are expressly prohibited from charging you to use or access this content. This application is not published, endorsed, or specifically approved by Paizo Publishing. For more information about Paizo\'s Community Use Policy, please visit paizo.com/communityuse. For more information about Paizo Publishing and Paizo products, please visit paizo.com</string>
    <string name="skill_str">Strength</string>
    <string name="skill_dex">Dexterity</string>
    <string name="skill_con">Constitution</string>
    <string name="skill_int">Intelligence</string>
    <string name="skill_wis">Wisdom</string>
    <string name="skill_cha">Charisma</string>
    <string name="bonus_acr01">Acrobatics: Dexterity +2</string>
    <string name="bonus_arc01">Arcane: Charisma +1</string>
    <string name="bonus_arc02">Arcane: Charisma +2</string>
    <string name="bonus_arc03">Arcane: Intelligence +2</string>
    <string name="bonus_dip01">Diplomacy: Charisma +2</string>
    <string name="bonus_dip02">Diplomacy: Charisma +3</string>
    <string name="bonus_dis01">Disable: Dexterity +2</string>
    <string name="bonus_div01">Divine: Charisma +1</string>
    <string name="bonus_div02">Divine: Wisdom +1</string>
    <string name="bonus_div03">Divine: Wisdom +2</string>
    <string name="bonus_for01">Fortitude: Constitution +2</string>
    <string name="bonus_for02">Fortitude: Constitution +3</string>
    <string name="bonus_kno01">Knowledge: Intelligence +2</string>
    <string name="bonus_kno02">Knowledge: Intelligence +3</string>
    <string name="bonus_mel01">Melee: Strength +2</string>
    <string name="bonus_mel02">Melee: Strength +3</string>
    <string name="bonus_per01">Perception: Wisdom +2</string>
    <string name="bonus_ran01">Ranged: Dexterity +3</string>
    <string name="bonus_ste01">Stealth: Dexterity +2</string>
    <string name="bonus_sur01">Survival: Wisdom +2</string>
    <string name="bonus_sur02">Survival: Wisdom +3</string>
    <string name="plus_1">+1</string>
    <string name="plus_2">+2</string>
    <string name="plus_3">+3</string>
    <string name="plus_4">+4</string>
    <string name="plus_5">+5</string>
    <string name="die">die</string>
    <string name="die_4">d4</string>
    <string name="die_6">d6</string>
    <string name="die_8">d8</string>
    <string name="die_10">d10</string>
    <string name="die_12">d12</string>
    <string name="prof_word">Proficiencies</string>
    <string name="prof_heavy">Heavy Armors</string>
    <string name="prof_light">Light Armors</string>
    <string name="prof_weapon">Weapons</string>
    <string name="number">Number</string>
    <string name="select_role">Select a Role</string>
    <string name="hand_size">Hand Size</string>
    <string name="class_amiri_base">Barbarian</string>
    <string name="class_amiri_1">Berserker</string>
    <string name="class_amiri_2">Juggernaut</string>
    <string name="class_ezren_base">Wizard</string>
    <string name="class_ezren_1">Evoker</string>
    <string name="class_ezren_2">Illusionist</string>
    <string name="class_harsk_base">Ranger</string>
    <string name="class_harsk_1">Sniper</string>
    <string name="class_harsk_2">Tracker</string>
    <string name="class_kyra_base">Cleric</string>
    <string name="class_kyra_1">Healer</string>
    <string name="class_kyra_2">Exorcist</string>
    <string name="class_lem_base">Bard</string>
    <string name="class_lem_1">Virtuoso</string>
    <string name="class_lem_2">Charlatan</string>
    <string name="class_lini_base">Druid</string>
    <string name="class_lini_1">Shapeshifter</string>
    <string name="class_lini_2">Wild Warden</string>
    <string name="class_merisiel_base">Rogue</string>
    <string name="class_merisiel_1">Acrobat</string>
    <string name="class_merisiel_2">Thief</string>
    <string name="class_sajan_base">Monk</string>
    <string name="class_sajan_1">Drunken Master</string>
    <string name="class_sajan_2">Zen Archer</string>
    <string name="class_seelah_base">Paladin</string>
    <string name="class_seelah_1">Crusader</string>
    <string name="class_seelah_2">Hospitaler</string>
    <string name="class_seoni_base">Sorcerer</string>
    <string name="class_seoni_1">Abyssal Sorcerer</string>
    <string name="class_seoni_2">Celestial Sorcerer</string>
    <string name="class_valeros_base">Fighter</string>
    <string name="class_valeros_1">Guardian</string>
    <string name="class_valeros_2">Weapon Master</string>
    <string name="power_seoni_0_1_base_1">For your combat check, you may discard any card to roll your Arcane die +1d6</string>
    <string name="power_seoni_0_1_base_2">with the Attack, Fire, and Magic traits. This counts as playing a spell.</string>
    <string name="power_seoni_0_1_upg_2">@string/plus_1</string>
    <string name="power_seoni_0_1_upg_3">@string/plus_2</string>
    <string name="power_seoni_12_1_upg_5">@string/plus_3</string>
    <string name="power_seoni_12_1_upg_6">@string/plus_4</string>
    <string name="power_seoni_1_1_base_2">with the Fire</string>
    <string name="power_seoni_1_1_upg_7">or Acid</string>
    <string name="power_seoni_1_1_base_3">trait and the Attack and Magic traits. This counts as playing a spell.</string>
    <string name="power_seoni_012_2_base_1">You automatically succeed at your check to recharge a spell</string>
    <string name="power_seoni_012_2_base_2">with the Arcane trait.</string>
    <string name="power_seoni_012_2_upg_4">or item</string>
    <string name="power_seoni_1_3_upg_8_base_1">Reduce Fire</string>
    <string name="power_seoni_1_3_upg_9">and Acid and Cold</string>
    <string name="power_seoni_1_3_upg_8_base_2">damage dealt to you by</string>
    <string name="power_seoni_1_3_upg_10">2.</string>
    <string name="power_seoni_1_3_upg_8_base_3">1.</string>
    <string name="power_seoni_1_4_upg_11">When you play Blessing of Pharasma, add d12 instead of the normal die.</string>
    <string name="power_seoni_1_5_upg_12">At the start of your turn, you may banish an ally to draw 3 cards.</string>
    <string name="power_seoni_2_3_upg_8">If you would fail a check by 1, you may bury a card to succeed.</string>
    <string name="power_seoni_2_4_upg_9_base_1">Reduce Fire</string>
    <string name="power_seoni_2_4_upg_10">and Electricity</string>
    <string name="power_seoni_2_4_upg_9_base_2">damage dealt to you by</string>
    <string name="power_seoni_2_4_upg_11">2.</string>
    <string name="power_seoni_2_4_upg_9_base_3">1.</string>
    <string name="power_seoni_2_5_upg_12">When you play Blessing of Pharasma, add d12 instead of the normal die.</string>
    <string name="power_ezren_012_1_base_1">After you play a spell with the Arcane trait, you may examine the top card of your deck; if it is a spell, you may put it in your hand</string>
    <string name="power_ezren_2_1_upg_5">or recharge it</string>
    <string name="power_ezren_012_1_base_2">.</string>
    <string name="power_ezren_012_2">If you acquire a card with the Magic trait during an exploration, you may immediately explore again.</string>
    <string name="power_ezren_012_3_upg_3_base_1">Add</string>
    <string name="power_ezren_012_3_upg_3_base_2">1</string>
    <string name="power_ezren_012_3_upg_4">2</string>
    <string name="power_ezren_12_3_upg_6">3</string>
    <string name="power_ezren_12_3_upg_7">4</string>
    <string name="power_ezren_012_3_upg_3_base_3">to your check to recharge a card.</string>
    <string name="power_ezren_1_4_upg_8_base_1">Add 2 to your Arcane check with the Force</string>
    <string name="power_ezren_1_4_upg_9">or Acid and Cold</string>
    <string name="power_ezren_1_4_upg_10">or Electricity and Fire</string>
    <string name="power_ezren_1_4_upg_8_base_2">trait.</string>
    <string name="power_ezren_1_4_upg_8_base_3">traits.</string>
    <string name="power_ezren_1_5_upg_11_base_1">Add</string>
    <string name="power_ezren_1_5_upg_12">4</string>
    <string name="power_ezren_1_5_upg_11_base_2">2</string>
    <string name="power_ezren_1_5_upg_11_base_3">to your check to acquire a spell.</string>
    <string name="power_ezren_2_4_upg_8">If you play a spell to evade a monster, you may put the monster on the bottom of the deck.</string>
    <string name="power_ezren_2_5_upg_9_base_1">Add</string>
    <string name="power_ezren_2_5_upg_10">4</string>
    <string name="power_ezren_2_5_upg_9_base_2">2</string>
    <string name="power_ezren_2_5_upg_9_base_3">to your check to acquire a spell</string>
    <string name="power_ezren_2_5_upg_11">or ally</string>
    <string name="power_ezren_2_5_upg_9_base_4">.</string>
    <string name="power_ezren_2_6_upg_12">At the start of your turn, you may discard a card to draw a card.</string>
    <string name="power_merisiel_012_1_base_1">You may evade your encounter</string>
    <string name="power_merisiel_1_1_upg_6">and may put the card on top of the deck</string>
    <string name="power_merisiel_012_1_base_2">.</string>
    <string name="power_merisiel_012_2_base_1">If you are the only character at your location, you may recharge a card to add 1d6</string>
    <string name="cards_wea">Weapon</string>
    <string name="cards_spe">Spell</string>
    <string name="cards_arm">Armor</string>
    <string name="cards_ite">Item</string>
    <string name="cards_all">Ally</string>
    <string name="cards_ble">Blessing</string>
</resources>