<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeckListActivity" >

    <RelativeLayout 
        android:id="@+id/relative_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

	    <!-- Weapon -->
	    <TextView
	        android:id="@+id/wea_word"
	        style="@style/Deck_List_Names"
	        android:layout_marginBottom="10sp"
	        android:text="@string/cards_wea" />
	    <TextView
	        android:id="@+id/wea_count"
	        style="@style/Deck_List_Counts"
	        android:layout_toRightOf="@id/wea_word"/>
	    <LinearLayout
	        android:id="@+id/wea_list"
	        android:orientation="vertical"
	        android:layout_below="@id/wea_word"
	        android:layout_marginLeft="20dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </LinearLayout>
	    
	    <View 
	        android:id="@+id/hr1"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="10sp"
	        android:layout_below="@id/wea_list"
	        style="@style/Light_Divider"/>
	    
	    <!-- Spell -->
	    <TextView
	        android:id="@+id/spe_word"
	        style="@style/Deck_List_Names"
	        android:layout_below="@id/hr1"
	        android:text="@string/cards_spe" />
	    <TextView
	        android:id="@+id/spe_count"
	        style="@style/Deck_List_Counts"
	        android:layout_toRightOf="@id/spe_word"
	        android:layout_below="@id/hr1"/>
	    <LinearLayout
	        android:id="@+id/spe_list"
	        android:orientation="vertical"
	        android:layout_below="@id/spe_word"
	        android:layout_marginLeft="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </LinearLayout>
	    
	    <View 
	        android:id="@+id/hr2"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="10sp"
	        android:layout_below="@id/spe_list"
	        style="@style/Light_Divider"/>
	    
	    <!-- Armor -->
	    <TextView
	        android:id="@+id/arm_word"
	        style="@style/Deck_List_Names"
	        android:layout_below="@id/hr2"
	        android:text="@string/cards_arm" />
	    <TextView
	        android:id="@+id/arm_count"
	        style="@style/Deck_List_Counts"
	        android:layout_toRightOf="@id/arm_word"
	        android:layout_below="@id/hr2"/>
	    <LinearLayout
	        android:id="@+id/arm_list"
	        android:orientation="vertical"
	        android:layout_below="@id/arm_word"
	        android:layout_marginLeft="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </LinearLayout>
	    
	    <View 
	        android:id="@+id/hr3"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="10sp"
	        android:layout_below="@id/arm_list"
	        style="@style/Light_Divider"/>
	    
	    <!-- Item -->
	    <TextView
	        android:id="@+id/ite_word"
	        style="@style/Deck_List_Names"
	        android:layout_below="@id/hr3"
	        android:text="@string/cards_ite" />
	    <TextView
	        android:id="@+id/ite_count"
	        style="@style/Deck_List_Counts"
	        android:layout_toRightOf="@id/ite_word"
	        android:layout_below="@id/hr3"/>
	    <LinearLayout
	        android:id="@+id/ite_list"
	        android:orientation="vertical"
	        android:layout_below="@id/ite_word"
	        android:layout_marginLeft="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </LinearLayout>
	    
	    <View 
	        android:id="@+id/hr4"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="10sp"
	        android:layout_below="@id/ite_list"
	        style="@style/Light_Divider"/>
	    
	    <!-- Ally -->
	    <TextView
	        android:id="@+id/all_word"
	        style="@style/Deck_List_Names"
	        android:layout_below="@id/hr4"
	        android:text="@string/cards_all" />
	    <TextView
	        android:id="@+id/all_count"
	        style="@style/Deck_List_Counts"
	        android:layout_toRightOf="@id/all_word"
	        android:layout_below="@id/hr4"/>
	    <LinearLayout
	        android:id="@+id/all_list"
	        android:orientation="vertical"
	        android:layout_below="@id/all_word"
	        android:layout_marginLeft="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </LinearLayout>
	    
	    <View 
	        android:id="@+id/hr5"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="10sp"
	        android:layout_below="@id/all_list"
	        style="@style/Light_Divider"/>
	    
	    <!-- Blessing -->
	    <TextView
	        android:id="@+id/ble_word"
	        style="@style/Deck_List_Names"
	        android:layout_below="@id/hr5"
	        android:text="@string/cards_ble" />
	    <TextView
	        android:id="@+id/ble_count"
	        style="@style/Deck_List_Counts"
	        android:layout_toRightOf="@id/ble_word"
	        android:layout_below="@id/hr5"/>
	    <LinearLayout
	        android:id="@+id/ble_list"
	        android:orientation="vertical"
	        android:layout_below="@id/ble_word"
	        android:layout_marginLeft="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </LinearLayout>
	
	</RelativeLayout>

</ScrollView>
